# sp-index-lab

./: .cursorrules  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  EXECUTION_PLAN.md  FRONTEND.md  PRD.md  README.md  RESEARCH.md  TASKS.md  WORKFLOW.md  pyproject.toml
.github/workflows/: ci.yml  daily_update.yml  update_reference_data.yml
.streamlit/: config.toml
app/: Home.py
data/reference/: README.md  excluded_tickers.csv  shares_outstanding.csv  ticker_aliases.csv  topn_snapshots.csv
data/research/: cap_proxy_bias.json  holdout_criteria.yaml  holdout_results.jsonl  race_result.json  trials.jsonl
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useLabData.ts  useMachineState.ts
frontend/lib/: constants.ts  formatters.ts  tooltips.ts  types.ts
scripts/: __init__.py  backfill.py  check_cap_proxy_bias.py  daily_update.py  export_frontend_data.py  init_db.py  run_alpha_backtest.py  run_holdout.py  run_legacy_race.py  run_research_race.py  update_shares_outstanding.py
src/: config.py
src/backtest/: __init__.py  costs.py  engine.py  metrics.py
src/data/: fetcher.py  storage.py  universe.py
src/features/: __init__.py  beta.py  factors.py  regime.py  sentiment.py  technical.py
src/optimizer/: constraints.py  ensemble.py  (+2 more)
tests/: test_costs.py  test_data.py  test_dynamic_alpha.py  test_export.py  test_features.py  test_hedged.py  test_metrics.py  test_ml.py  test_optimizer.py  test_proof.py  test_research.py  test_sentiment.py  test_universe.py  test_walk_forward_engine.py
(+45 files in other folders)
